--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -137,9 +137,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
-  margin-top: 5vh;
-  
+  justify-content: center;  
 }
 
 .best-courses-title{
@@ -215,5 +213,6 @@
 .greeting{
     color: var(--navy);
     text-align: center;
-    margin-top: 2em;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
