--- a/assets/styles/showcourse.css
+++ b/assets/styles/showcourse.css
@@ -15,13 +15,17 @@
 .cshow-container-right{
     width: 20%;
     padding-right: 25px;
+    margin-right: 1%;
+    border-left: 1px solid var(--navy);
+    margin-top: 1%;
 }
 
 .cshow-container-left{
     width: 80%;
-    border-right: solid 3px var(--brightblue);
     height: 100%;
+    margin-right: 1%;
     padding-bottom: 5em;
+    box-shadow: 15px 0px 25px -12px rgba(66, 68, 90, 1);
 }
 
 .cshow-details{
@@ -29,6 +33,7 @@
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    margin-top: 2em;
     margin-left: 2em;
     padding-right: 5em;
 }
