--- a/assets/styles/usercoursespanel.css
+++ b/assets/styles/usercoursespanel.css
@@ -24,6 +24,12 @@
     justify-content: center;
 }
 
+.instructor-course-list-btn-section{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 200px;
+}
 
 
 /* myLearning */
