feat: style improvement in few areas

--- a/templates/admin_panel_base.html.twig
+++ b/templates/admin_panel_base.html.twig
@@ -13,8 +13,9 @@
         {% endblock %}
     </head>
     <body>
+        
+        <div class="navbar-empty-container"></div>
         <nav class="navbar">
-
             <div class="navbar-container-left">
                 <div class="navbar-item">
                     <a href="{{ path('app_admin_panel') }}" class="navbar-item"><img height=100 src="/images/logo.png" alt="logo"></a>
