--- a/assets/styles/homepage.css
+++ b/assets/styles/homepage.css
@@ -44,6 +44,7 @@
     cursor: pointer;
     font-size: 1em;
     margin: 2em;
+    padding: 2em;
     width: 80%;
     min-height: 200px;
     border-bottom: 1px solid var(--navy);
@@ -52,6 +53,7 @@
 .courses-list-element:hover{
     background-color: var(--lightblue);
     transition: background 0.3s ease-out;
+    box-shadow: 0px 0px 10px 0px rgba(66, 68, 90, 1);
 }
 
 .courses-list-element-details-section {
