--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -590,7 +590,7 @@ body {
     padding: 0.8em 1.2em 0.8em 1em;
     transition: all ease-in-out 0.2s;
     font-size: 16px;
-    box-shadow: 0px 0px 10px 0px rgba(66, 68, 90, 1);
+    box-shadow: 0px 0px 5px 0px var(--navy);
 }
   
 .btn-default span {
@@ -620,7 +620,7 @@ body {
     padding: 0.8em 1.2em 0.8em 1em;
     transition: all ease-in-out 0.2s;
     font-size: 16px;
-    box-shadow: 0px 0px 10px 0px rgba(66, 68, 90, 1);
+    box-shadow: 0px 0px 5px 0px var(--navy);
 }
   
 .btn-default-red span {
